[gd_scene load_steps=11 format=3 uid="uid://dr5h4igk1uk1x"]

[ext_resource type="Script" path="res://Scenes/Scripts/player.gd" id="1_bx745"]
[ext_resource type="AudioStream" uid="uid://duwrvp8lmogj0" path="res://Audio/FX/ring.ogg" id="3_s2ogt"]
[ext_resource type="AudioStream" uid="uid://6awa70y4vryu" path="res://Audio/FX/jump.ogg" id="4_p63kn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cb1fg"]
albedo_color = Color(0.328, 0.3854, 0.82, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_blown"]
material = SubResource("StandardMaterial3D_cb1fg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rjs8r"]
albedo_color = Color(1, 0.7975, 0.55, 1)

[sub_resource type="BoxMesh" id="BoxMesh_e1lvj"]
material = SubResource("StandardMaterial3D_rjs8r")
size = Vector3(0.5, 0.5, 0.15)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pjq45"]
radius = 0.261054
height = 1.67536

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lttlp"]
albedo_color = Color(0.078, 0.0954, 0.6, 1)

[sub_resource type="SphereMesh" id="SphereMesh_2ndy1"]
material = SubResource("StandardMaterial3D_lttlp")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
floor_snap_length = 1.0
script = ExtResource("1_bx745")

[node name="Sonic" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.963517, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Sonic"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.00794961, 0, -0.499934)
mesh = SubResource("CapsuleMesh_blown")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Sonic"]
transform = Transform3D(-1.10346, 0, 2.24716e-07, 0, 0.741728, 0, -9.64679e-08, 0, -2.57045, 0.00794961, 0.462719, -0.000126407)
mesh = SubResource("BoxMesh_e1lvj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00879997, 0.733579, -0.0363729)
shape = SubResource("CapsuleShape3D_pjq45")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.594823, 0, 0, 0, 0.594823, 0, 0, 0, 0.594823, 0.0997639, 1.32975, 2.9983)
doppler_tracking = 1

[node name="JumpModel" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="JumpModel"]
mesh = SubResource("SphereMesh_2ndy1")

[node name="SpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(0.999998, -0.00123651, 0.00175484, 0.00113773, 0.998474, 0.0552126, -0.00182043, -0.0552105, 0.998473, 0.0983381, 1.14334, 3.13261)
light_color = Color(1, 0.888, 0.79, 1)
light_energy = 3.095
shadow_enabled = true
spot_range = 3.70408
spot_angle = 20.335

[node name="RingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s2ogt")
max_polyphony = 20

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_p63kn")
pitch_scale = 1.14
